--- a/rured/beamerouterthemeruredplain.sty
+++ b/rured/beamerouterthemeruredplain.sty
@@ -42,9 +42,9 @@
             \pgfpathlineto{\pgfpoint{0}{\the\paperheight-2.39cm}}
             \pgfusepath{fill}
             % RU logo
-            \pgftext[at=\pgfpoint{\the\paperwidth-4.06cm}{0.32cm},left,base]{%
-              \includegraphics[height=0.79cm]{rulogo}
-            }
+%            \pgftext[at=\pgfpoint{\the\paperwidth-4.06cm}{0.32cm},left,base]{%
+%              \includegraphics[height=0.79cm]{rulogo}
+%            }
         \else
           \pgfsetcolor{white}
           \pgfpathrectangle{\pgfpoint{0cm}{0cm}}{\pgfpoint{\the\paperwidth}{\the\paperheight-1.1cm}}
@@ -62,9 +62,9 @@
           \fi
 
           % RU logo
-          \pgftext[at=\pgfpoint{\the\paperwidth-5cm}{0.15cm},left,base]{%
-            \includegraphics[height=0.79cm]{rulogo}
-          }
+ %         \pgftext[at=\pgfpoint{\the\paperwidth-5cm}{0.15cm},left,base]{%
+ %           \includegraphics[height=0.79cm]{rulogo}
+ %         }
         \fi
 
           \ifbeamer@official
