Some small improvements. The corporate style does not make any sense. But anyway...

--- a/ruhuisstijl/beamercolorthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamercolorthemeruhuisstijl.sty
@@ -1,7 +1,10 @@
 \mode<presentation>
 
-\setbeamercolor*{title page header}{fg=green}
-\setbeamercolor*{author}{fg=blue}
-\setbeamercolor*{date}{fg=yellow}
+\ProcessOptionsBeamer
 
 \mode<all>
+
+\definecolor{ruhuisstijlrood}{rgb}{0.745,0.192,0.102}
+\definecolor{ruhuisstijlzwart}{rgb}{0,0,0}
+\definecolor{ruhuisstijlwit}{rgb}{1,1,1}
+
