--- a/ruhuisstijl/beamerthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerthemeruhuisstijl.sty
@@ -7,6 +7,6 @@
 \usecolortheme{ruhuisstijl}
 
 \setbeamertemplate{navigation symbols}{}
-\setbeamertemplate{blocks}[rounded][shadow=true]
+%\setbeamertemplate{blocks}
 
 \mode<all>
