--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -1,7 +1,8 @@
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\title{Example presentation for Radboud Huisstijl}
+\title{RU Beamer}
+\subtitle{Gebruiksvoorwaarden \& sjablonen (juli 2014)}
 \date{\today}
 \author{lama-fan}
 
@@ -14,7 +15,24 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Improvement}
+    \frametitle{Gebruiksvoorwaarden tekstpagina's (witte achtergrond)}
+
+    \begin{block}{Maak altijd gebruik van lettertype Arial}
+        \begin{itemize}
+            \item Paginatitel: standaard, grootte 30 pt
+            \item Tekst/inhoud: standaard, grootte 25 pt (of 21 pt)
+            \item Tussenkoppen: vet, grootte 25 pt (of 21 pt)
+            \item Fotobijschriften: standaard, grootte 18 pt
+        \end{itemize}
+    \end{block}
+
+    \begin{block}{Plaats teksten altijd in zwart of rood}
+        \begin{itemize}
+            \item Paginatitel: RU huisstijl rood \emph{(RGB: 190, 49, 26)}
+            \item Inhoud tekst en tussenkoppen: zwart
+        \end{itemize}
+    \end{block}
+
     
 \end{frame}
 
