--- a/ruhuisstijl/beamerinnerthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerinnerthemeruhuisstijl.sty
@@ -1,5 +1,7 @@
 \mode<presentation>
 
+\RequirePackage[overlay,absolute]{textpos}
+
 \setbeamertemplate{background}{
   %\hspace*{-1cm}\includegraphics[width=1\paperwidth]{ruhuisstijl2014-43-slide.pdf}
   \ifnum\thepage>1\relax%
@@ -16,7 +18,22 @@
 
 \defbeamertemplate*{title page}{ruhuisstijl}[1][]
 {
+%\makebox[\textwidth][c]{
+%\begin{tikzpicture}[remember picture, overlay]
+%    \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
+%    \node at (0,0) {\includegraphics[width=1\paperwidth]{ruhuisstijl2014-43-front.pdf}};
+%\end{tikzpicture}
+%}
+
+%    \setlength{\TPHorizModule}{1in}
+%    \setlength{\TPVertModule}{1in}
+
     \hspace*{-1cm}\includegraphics[width=1\paperwidth]{ruhuisstijl2014-43-front.pdf}
+
+    \begin{textblock}{12}(1.5,1.5)
+        \usebeamerfont{title}\inserttitle\par%
+        \vspace{0.25cm}\usebeamerfont{subtitle}\insertsubtitle\par%
+    \end{textblock}
 %    \begin{tikzpicture}
 %    \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
 %    \node[at=(current page.south east),anchor=south east,inner sep=0pt] {\includegraphics[width=4cm,height=3cm,keepaspectratio]{ruhuisstijl2014-169-front.pdf}};
