--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[t]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \title{RU Beamer}
@@ -6,7 +6,8 @@
 \date{\today}
 \author{lama-fan}
 
-\usetheme{ruhuisstijl}
+%\usetheme[official=false]{ruhuisstijl}
+\usetheme[official=true]{ruhuisstijl}
 
 \begin{document}
 
@@ -34,6 +35,42 @@
     \end{block}
 
     
+\end{frame}
+
+\begin{frame}
+    \frametitle{Titel en object}
+
+    \begin{block}{Dit is een tussenkop}
+    Rectiatem sunto bla velesti berestrupta conseria quam quae commo et eaquam quo dolent omnistis estion cuptatet duciendae dolorunt ipit, omnimus trumqui ommolor simporuntium fugit eicatem quis autem eatemquiam nissum eatum facerit inciis voluptas quae aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapid.
+
+    Een opsomming:
+    \begin{itemize}
+        \item que volore non etur aut laborum, te repudam, sus es acerrov itatest omnitatur, ea vid qui tempore re, alique.
+        \begin{itemize}
+            \item Am restibusam nihillor 
+            \item Alias ne officati officate
+            \item Sequae dollitate porat vitatem
+        \end{itemize}
+    \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Twee objecten}
+
+    \begin{columns}[T]
+        \begin{column}{0.45\textwidth}
+        \begin{block}{Dit sjabloon kunt u gebruiken voor twee tekstkolommen}
+            Berestrupta conseria quam quae commo et eaquam quo dolent omnistis estion cuptatet duciendae ommolor simporuntium fugit eicatem quis autem eatemquiam nissum eatum facerit inciis voluptas quae 
+aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapid molore autestium dio el in pelibea rcimustio esectae moluption reriam.
+        \end{block}
+        \end{column}
+        \begin{column}{0.45\textwidth}
+Am restibusam nihillor alias ne officati officate numet, quiate autem rerro ipsam, sequae dollitate porat vitatem litatiaestis acesequid et ut moluptas dolorum voluptat a poruntibus imillaut fugia velitatempor.
+
+Magniscil illuptibus moleceria cumquis doluptu saerro in coresto volorecesse modit qui omnima volluptur, quo magnia coratis dus et faccae non plibusant. Ugit voluptatio eseria possimaio opturitatur.
+        \end{column}
+    \end{columns}
 \end{frame}
 
 \end{document}
