Colors! Frametitles! Getting there...

--- a/ruhuisstijl/beamercolorthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamercolorthemeruhuisstijl.sty
@@ -2,6 +2,10 @@
 
 \ProcessOptionsBeamer
 
+\setbeamercolor{normal text}{fg=ruhuisstijlzwart}
+\setbeamercolor{frametitle}{fg=ruhuisstijlrood}
+
+
 \mode<all>
 
 \definecolor{ruhuisstijlrood}{rgb}{0.745,0.192,0.102}
