--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -16,6 +16,25 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Gebruiksvoorwaarden algemeen}
+
+    \begin{block}{Titelpagina's (rood)}
+        \begin{itemize}
+            \item Maak altijd gebruik van de rode titelpagina met het logo van de Radboud Universiteit rechtsonder
+            \item Er mogen geen extra tekstvelden of afbeeldingen worden toegevoegd
+            \item Indien een openingspagina als tussenpagina wordt gebruikt mogen er wel afbeeldingen toegevoegd worden
+        \end{itemize}
+    \end{block}
+
+    \begin{block}{Tekstpagina's}
+        \begin{itemize}
+            \item Gebruik voor tekstpainga's altijd de witte dia met het logo in de rode balk
+            \item Teksten linkslijnend plaatsen, niet centreren
+        \end{itemize}
+    \end{block}
+\end{frame} 
+
+\begin{frame}
     \frametitle{Gebruiksvoorwaarden tekstpagina's (witte achtergrond)}
 
     \begin{block}{Maak altijd gebruik van lettertype Arial}
