--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -28,7 +28,7 @@
 
     \begin{block}{Tekstpagina's}
         \begin{itemize}
-            \item Gebruik voor tekstpainga's altijd de witte dia met het logo in de rode balk
+            \item Gebruik voor tekstpagina's altijd de witte dia met het logo in de rode balk
             \item Teksten linkslijnend plaatsen, niet centreren
         \end{itemize}
     \end{block}
@@ -53,7 +53,13 @@
         \end{itemize}
     \end{block}
 
-    
+    \begin{block}{Maak altijd gebruik vastgestelde kantlijn}
+        \begin{itemize}
+            \item Titel en tekst/inhoud: horizontaal vanaf links 2,5 cm
+            \item Titel: verticaal vanaf boven 2 cm
+            \item Tekst/inhoud: verticaal vanaf boven 5 cm
+        \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}
