Three things are not right yet: 1) Long frame titles are overlapping the content 2) The columns environment ignores the margin 3) The font is off

--- a/ruhuisstijl/beamerinnerthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerinnerthemeruhuisstijl.sty
@@ -31,7 +31,7 @@
     \hspace*{-1cm}\includegraphics[width=1\paperwidth]{ruhuisstijl2014-43-front.pdf}
 
     \begin{textblock}{12}(1.5,1.5)
-        \usebeamerfont{title}\inserttitle\par%
+        \usebeamerfont{title}{\Huge\inserttitle}\par%
         \vspace{0.25cm}\usebeamerfont{subtitle}\insertsubtitle\par%
     \end{textblock}
 %    \begin{tikzpicture}
