--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -60,6 +60,39 @@
             \item Tekst/inhoud: verticaal vanaf boven 5 cm
         \end{itemize}
     \end{block}
+
+    {\tiny Afbeeldingen en teksten mogen nooit over de onderste lijn en het logo geplaatst worden.}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Kleuren in het RU Thema}
+
+    Zwart: RGB 0/0/0 \\
+    Wit: RGB 250/250/250 \\
+    \textcolor{ruhuisstijlrood}{Rood: RGB 190/49/26 (RU huisstijl rood)} \\
+    \href{http://google.com/}{Hyperlink: RGB 190/49/26 (RU huisstijl rood)}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Sjablonen}
+    
+    Alle gebruikte sjablonen zijn aangemaakt in het basisdocument. \\
+    U vindt de sjablonen onder Dia's > indelingen.
+
+    Gebruik sjablonen uit de mappen:
+    \begin{itemize}
+        \item Dia's > Indelingen > \textcolor{ruhuisstijlrood}{RU Tekstpagina's}
+        \item Dia's > Indelingen > \textcolor{ruhuisstijlrood}{RU Titelpagina's}
+    \end{itemize}
+
+    \vspace{1em}
+
+    {\tiny Hierna volgen enkele voorbeeldpagina's, de paginatitels zijn gelijk aan de naam van het sjabloon}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Tussenpagina}
+
 \end{frame}
 
 \begin{frame}
@@ -84,16 +117,59 @@
     \frametitle{Twee objecten}
 
     \begin{columns}[T]
-        \begin{column}{0.45\textwidth}
+        \begin{column}{0.5\textwidth}
         \begin{block}{Dit sjabloon kunt u gebruiken voor twee tekstkolommen}
             Berestrupta conseria quam quae commo et eaquam quo dolent omnistis estion cuptatet duciendae ommolor simporuntium fugit eicatem quis autem eatemquiam nissum eatum facerit inciis voluptas quae 
 aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapid molore autestium dio el in pelibea rcimustio esectae moluption reriam.
         \end{block}
         \end{column}
-        \begin{column}{0.45\textwidth}
+        \begin{column}{0.5\textwidth}
 Am restibusam nihillor alias ne officati officate numet, quiate autem rerro ipsam, sequae dollitate porat vitatem litatiaestis acesequid et ut moluptas dolorum voluptat a poruntibus imillaut fugia velitatempor.
 
 Magniscil illuptibus moleceria cumquis doluptu saerro in coresto volorecesse modit qui omnima volluptur, quo magnia coratis dus et faccae non plibusant. Ugit voluptatio eseria possimaio opturitatur.
+        \end{column}
+    \end{columns}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Twee objecten}
+
+    \begin{columns}[T]
+        \begin{column}{0.5\textwidth}
+            \begin{block}{Maar ook voor een tekstkolom en een afbeelding}
+                Rectiatem sunto bla velesti berestrupta conseria quam quae omnistis estion cuptatet duciendae ommolor simporuntium fugit eicatem quis autem eatemquiam nissum eatum facerit inciis voluptas quae 
+aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapid molore autestium dio el in pelibea rcimustio esectae moluption reriam.
+            \end{block}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+
+        \end{column}
+    \end{columns}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Vergelijking}
+        
+    \begin{columns}[T]
+        \begin{column}{0.5\textwidth}
+            \begin{block}{Sapienis simet esto ugit voluptatio eseria possimaio opturitatur}
+                \begin{itemize}
+                    \item Nem aut aut ipsa nest volo doluptat vendelique nimus simossi.
+                    \item Magnihi cimaios descidist verum, con rere que molenis adipsus apisin repressunt atibuscipsum.
+                    \item Velibust praestiore natur, coresed que que dolut raturer roreperciae veribus num voloreiciet arum que.
+                    \item Quatemped unt la dolores sequodi gnataes dictibus estrunt iorers pedia de pelluptae.
+                \end{itemize}
+            \end{block}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \begin{block}{Imus acerita dis quasper lita tiaestis acesequid et ut moluptas}
+                \begin{itemize}
+                    \item Quisqui aut aut volutem quam quo tet, quam iliquiatqui conseque dita
+                    \item Aut harum ipsam vid untia ne dolupta corum de qui.
+                    \item Aut qui ut utet everrum quatur sunto ea sunt lam que sae lit aut volupta turerum exeri.
+                    \item Dolorit odi utemqui coris magnatus experfe rionsequam rera vel mil maiorupta serae dolupiet ius aliciti simagnimodi.
+                \end{itemize}
+            \end{block}
         \end{column}
     \end{columns}
 \end{frame}
