--- a/ruhuisstijl/beamerinnerthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerinnerthemeruhuisstijl.sty
@@ -28,8 +28,8 @@
 %    \setlength{\TPHorizModule}{1in}
 %    \setlength{\TPVertModule}{1in}
 
-    \hspace*{-1cm}\includegraphics[width=1\paperwidth]{ruhuisstijl2014-43-front.pdf}
-
+    \vspace*{-0.25cm}\hspace*{-1cm}\includegraphics[width=1\paperwidth]{ruhuisstijl2014-43-front.pdf}
+    
     \begin{textblock}{12}(1.5,1.5)
         \usebeamerfont{title}{\Huge\inserttitle}\par%
         \vspace{0.25cm}\usebeamerfont{subtitle}\insertsubtitle\par%
